<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<AutoCompleteTextView android:background="@color/revisal_australis_scathing" android:hint="@string/flounce_appleby_piggy" android:id="@+id/reapView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/twine_boxwood_aldermen_acyclic" android:textColor="@color/toolsmith_proponent" app:layout_constraintBottom_toTopOf="@id/skunkView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<TextView android:hint="@string/gibberellin_schedule_pagoda" android:id="@+id/skunkView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/upstage_give_kiwi_expressive" android:textColor="@color/test_littermate_thisll" app:layout_constraintBottom_toTopOf="@id/gunpowderLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/reapView"/>
<LinearLayout android:gravity="center" android:id="@+id/gunpowderLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/iconoclastBarnesLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/skunkView">
<AutoCompleteTextView android:background="#74D17EFB" android:hint="@string/inflame_berkshire_bedazzle_sanford" android:id="@+id/pianissimoExudateView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/scan_parvenu_gasify_resign" android:textColor="@color/cottonwood_sacrosanct"/>
<Button android:background="@color/despite_ammeter_arragon" android:hint="@string/lexicon_ulcerate_estuarine" android:id="@+id/notreView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/holstein_decathlon_darn_ballroom" android:textColor="@color/diagramming_theodore_hardhat" android:textSize="@dimen/revulsion_merganser_textsize"/>
<CheckBox android:background="@color/stablemen_epidermis_marginalia" android:hint="@string/fanatic_abject_kind_adapt" android:id="@+id/merleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/signpost_inadvisable_dakar"/>
<EditText android:background="@color/polish_tilde" android:hint="@string/chili_thankful_fifo_septennial" android:id="@+id/basemanView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/crucible_hellebore" android:text="@string/harden_pursuit_buoyant" android:textColor="@color/glassy_thistle_patricia"/>
<Button android:background="#5645A0" android:hint="@string/wedding_meadowsweet_chapping" android:id="@+id/sturbridgeCargoesView" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingTop="@dimen/crop_harry_height" android:text="@string/peregrine_skippy_easternmost" android:textColor="@color/raisin_skipjack"/>
<AutoCompleteTextView android:background="@color/promenade_booth_exorcise" android:hint="@string/inarticulate_earthworm_jerry" android:id="@+id/tinctureBottleneckView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/nectarine_shore_padding" android:text="@string/grew_telescope_paraxial_stood" android:textColor="#92E212"/>
<TextView android:background="#9444BFD3" android:hint="@string/shamefaced_bulgaria_increase_melodramatic" android:id="@+id/olduvaiView" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="@dimen/conundrum_donaldson_margin" android:text="@string/jimenez_smoothbore_zapping" android:textColor="@color/dionysus_decision_mathewson"/>
<CheckBox android:background="@color/daedalus_perform_falkland" android:hint="@string/momentous_daddy_pobox" android:id="@+id/tiedView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/equable_veil_radioastronomy_foal" android:textColor="#38B0C1F6" android:textSize="@dimen/inmate_tighten_textsize"/>
<TextView android:background="#0E29D2" android:hint="@string/ganges_belch_polyhedron" android:id="@+id/mahayanaView" android:layout_height="wrap_content" android:layout_marginTop="@dimen/obsequious_uniform" android:layout_width="wrap_content" android:padding="@dimen/recuse_bizarre_height" android:text="@string/beckman_inoperable_eohippus_moslem" android:textColor="@color/copernicus_sisyphus"/>
<CheckedTextView android:hint="@string/diary_arsenide_malabar" android:id="@+id/rangoonView" android:layout_height="wrap_content" android:layout_margin="@dimen/monrovia_swirl_height" android:layout_marginBottom="@dimen/ruse_middle_margin" android:layout_marginEnd="24dp" android:layout_marginStart="@dimen/contraception_centrifugate_height" android:layout_marginTop="@dimen/prosper_talkie_margin" android:layout_width="wrap_content" android:text="@string/wetland_foxtail_tsar"/>
</LinearLayout>
<LinearLayout android:gravity="center" android:id="@+id/iconoclastBarnesLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/futureFledglingView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gunpowderLayout">
<CheckBox android:background="@color/irksome_loot_melt" android:hint="@string/thyme_decollimate_blur" android:id="@+id/alaiNihilistView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cheap_coerce_calamus_racket"/>
<AutoCompleteTextView android:background="@color/clue_onerous" android:hint="@string/milwaukee_sixtyfold_waterloo" android:id="@+id/bizarreHamburgerView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingTop="@dimen/chamomile_concede_padding" android:text="@string/goff_toastmaster_glance_morristown"/>
</LinearLayout>
<CheckedTextView android:background="@color/concave_multiple" android:hint="@string/requisition_tammany_facto_complain" android:id="@+id/futureFledglingView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/siam_orthant_presumption_exhibitor" android:textColor="@color/shorefront_defiant_covet" app:layout_constraintBottom_toTopOf="@id/hockWifeView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iconoclastBarnesLayout"/>
<CheckedTextView android:background="@color/hypnotic_nevertheless" android:hint="@string/archery_delectate_booklet_raillery" android:id="@+id/hockWifeView" android:layout_height="wrap_content" android:layout_width="@dimen/noaa_descant" android:paddingEnd="@dimen/thoroughfare_village_size" android:paddingStart="32dp" android:text="@string/veterinarian_quirk_asunder_fuselage" android:textColor="#888F489F" app:layout_constraintBottom_toTopOf="@id/roundupView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/futureFledglingView"/>
<AutoCompleteTextView android:background="#BFD83DCF" android:hint="@string/plasmon_apocrypha_lapse" android:id="@+id/roundupView" android:layout_height="wrap_content" android:layout_width="@dimen/compendia_nietzsche_margin" android:text="@string/panic_barry_soap" android:textColor="@color/jagging_triassic" android:textSize="12sp" app:layout_constraintBottom_toTopOf="@id/turmoilView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/hockWifeView"/>
<Button android:hint="@string/matins_wriggle_vida_infer" android:id="@+id/turmoilView" android:layout_height="wrap_content" android:layout_width="@dimen/bayed_austria" android:text="@string/integrand_randall_door" app:layout_constraintBottom_toTopOf="@id/crepeView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/roundupView"/>
<Button android:background="#94D5C9" android:hint="@string/sevenfold_majesty_bilbao_composure" android:id="@+id/crepeView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/bravura_leapt_rotenone" android:textColor="@color/starfish_heron" app:layout_constraintBottom_toTopOf="@id/headboardVisorView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/turmoilView"/>
<Button android:background="@color/pandemonium_propulsion" android:hint="@string/frilly_derek_damselfly_proposition" android:id="@+id/headboardVisorView" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="46dp" android:text="@string/delineate_escalate_diatom_bedstraw" android:textColor="#974D67" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/crepeView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
