<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<LinearLayout android:gravity="end" android:id="@+id/sportswriterDuelLayout" android:layout_height="wrap_content" android:layout_marginTop="@dimen/enable_knapsack_padding" android:layout_width="wrap_content" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/foolishCallosityView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
<CheckedTextView android:background="#BB280AEF" android:hint="@string/tyke_rockabye_livermore_officio" android:id="@+id/habibSequelView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/cloven_hindmost_airman_bodybuilding" android:textColor="#FA3BA00A" android:textSize="@dimen/impartation_reckon_textsize"/>
<TextView android:background="@color/polyhedron_insolent" android:hint="@string/canteen_cryogenic_ammo_habituate" android:id="@+id/aardvarkView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/percival_skiff_gripe_pandanus" android:textColor="@color/census_garry_bishopric" android:textSize="@dimen/stella_gape_textsize"/>
<AutoCompleteTextView android:background="@color/paranoiac_hawley_reside" android:hint="@string/husbandry_grandfather_peafowl_stahl" android:id="@+id/programmableView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/vineyard_rotate_brumidi_statesmanlike" android:textColor="#12E219BE"/>
<Button android:hint="@string/flatware_tradition_verisimilitude" android:id="@+id/contumacyView" android:layout_height="wrap_content" android:layout_margin="@dimen/tetragonal_substitute_height" android:layout_width="wrap_content" android:text="@string/enid_melamine_busy_bedimmed" android:textColor="@color/ibex_afternoon_arachnid"/>
<Button android:background="#D41B2B30" android:hint="@string/extensor_sloganeer_felt" android:id="@+id/forwentSharonView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/panic_barry_soap" android:textColor="#AAF2F4"/>
<CheckBox android:background="@color/manhole_bernstein" android:hint="@string/collide_coroner_differentiable" android:id="@+id/debilitatePeddleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/grandeur_prevail_slake" android:textColor="@color/bandwidth_olive_gassy" android:textSize="@dimen/gurkha_blackbird_textsize"/>
<AutoCompleteTextView android:background="@color/upright_meal_fiction" android:hint="@string/comport_lied_geophysics_swathe" android:id="@+id/hockWifeView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/moloch_mangle_squeamish" android:textColor="#C8BBD7"/>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/bootstrapLayout" android:layout_height="wrap_content" android:layout_width="wrap_content">
<AutoCompleteTextView android:hint="@string/acceptant_moneywort_agatha" android:id="@+id/batchelderHeadphoneView" android:layout_height="wrap_content" android:layout_width="@dimen/centerline_urinate_height" android:text="@string/prolongate_yoga_habituate" android:textColor="@color/candid_fungible" app:layout_constraintBottom_toTopOf="@id/normandyBoughView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<EditText android:background="@color/yokohama_exist_menu" android:hint="@string/constructible_shakespeare_guillotine_scarce" android:id="@+id/normandyBoughView" android:inputType="textVisiblePassword" android:layout_height="wrap_content" android:layout_width="0dp" android:padding="@dimen/detractor_histology" android:text="@string/advent_quickstep_elaborate" android:textColor="@color/printmake_treat" android:textSize="@dimen/lascivious_plywood_textsize" app:layout_constraintBottom_toTopOf="@id/bushnellHaircutView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/batchelderHeadphoneView"/>
<CheckBox android:background="@color/vouchsafe_longue" android:hint="@string/cartographic_psychopath_bale_modular" android:id="@+id/bushnellHaircutView" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="@dimen/decant_lombardy_width" android:paddingEnd="22dp" android:paddingStart="@dimen/into_roadway_width" android:paddingTop="@dimen/nook_walpole_width" android:text="@string/indiscriminate_prosecution_hoot_brackish" android:textColor="@color/indecision_panjandrum" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/normandyBoughView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
<AutoCompleteTextView android:background="@color/frigid_cannot_outlawry" android:hint="@string/dicta_gallant_goldman" android:id="@+id/alexeiView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/arccosine_cybernetics_resolution_halcyon" android:textColor="@color/spalding_griffith"/>
<CheckedTextView android:hint="@string/yvette_sheep_camembert" android:id="@+id/switzerView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/revocable_gunman" android:layout_width="wrap_content" android:text="@string/plasmon_apocrypha_lapse" android:textColor="@color/bookworm_carbonium_nettlesome"/>
<Button android:background="@color/curriculum_fiducial" android:hint="@string/niger_leland_entry_nabisco" android:id="@+id/rockyView" android:layout_height="wrap_content" android:layout_margin="46dp" android:layout_width="wrap_content" android:text="@string/samurai_grad_pigeonfoot_spawn" android:textColor="@color/walla_thallium"/>
<TextView android:background="@color/frank_chordate" android:hint="@string/pamphlet_andesine_chess_extralinguistic" android:id="@+id/corrugateView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/mutual_exist_rowe" android:textColor="@color/douse_waxy"/>
</LinearLayout>
<CheckBox android:background="@color/gelable_fifth_caloric" android:hint="@string/blair_awake_plume_incubi" android:id="@+id/foolishCallosityView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/goldfish_thermometer_craggy" android:textColor="@color/youngish_bowstring" app:layout_constraintBottom_toTopOf="@id/cavalryEthaneView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sportswriterDuelLayout"/>
<EditText android:background="@color/gannet_hypotenuse_edgar" android:hint="@string/peripheral_monterey_jacobean_straightway" android:id="@+id/cavalryEthaneView" android:inputType="text" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/impede_hollandaise_deface" app:layout_constraintBottom_toTopOf="@id/footprintView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/foolishCallosityView"/>
<TextView android:background="@color/decor_gentleman" android:hint="@string/schumacher_napkin_pundit" android:id="@+id/footprintView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/workman_fragmentation_eunice_girth" android:textColor="@color/mailman_mudguard_battalion" app:layout_constraintBottom_toTopOf="@id/tracyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cavalryEthaneView"/>
<AutoCompleteTextView android:hint="@string/stoat_pirate_gentlemen" android:id="@+id/tracyView" android:layout_height="wrap_content" android:layout_width="@dimen/perceive_pyhrric_height" android:text="@string/bloodstain_durrell_balky_confect" android:textColor="#E026C519" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/footprintView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
