<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<TextView android:background="@color/quietus_madam_lotus" android:hint="@string/scan_parvenu_gasify_resign" android:id="@+id/cryogenicView" android:layout_height="wrap_content" android:layout_width="@dimen/ethel_stanch_margin" android:text="@string/champagne_tallow_ashame" android:textColor="@color/sidelight_merck" app:layout_constraintBottom_toTopOf="@id/aerogeneView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<AutoCompleteTextView android:hint="@string/chronography_copra_bloodroot_conduct" android:id="@+id/aerogeneView" android:layout_height="wrap_content" android:layout_width="0dp" android:paddingBottom="@dimen/deregulate_michigan_width" android:text="@string/inarticulate_earthworm_jerry" android:textColor="@color/pretension_kidnapping_lure" android:textSize="@dimen/isochronous_baptism_textsize" app:layout_constraintBottom_toTopOf="@id/coilView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cryogenicView"/>
<CheckedTextView android:hint="@string/sixfold_aborigine_clothbound" android:id="@+id/coilView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/gape_wanton_morn" android:textColor="#E27E1F" app:layout_constraintBottom_toTopOf="@id/heartfeltView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/aerogeneView"/>
<EditText android:background="@color/coriander_protease" android:hint="@string/trivalent_guideline_nudibranch_extralegal" android:id="@+id/heartfeltView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_width="@dimen/conn_dwight_width" android:padding="@dimen/impoverish_kitchen_height" android:text="@string/unit_tetravalent_wholly_lefty" android:textColor="@color/hypnotic_nevertheless" android:textSize="@dimen/sisyphean_gaberones_textsize" app:layout_constraintBottom_toTopOf="@id/rosaDatumLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/coilView"/>
<LinearLayout android:gravity="top|center_vertical" android:id="@+id/rosaDatumLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/heartfeltView">
<TextView android:hint="@string/entreat_citizen_forth_goldstein" android:id="@+id/abandonBlastulaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/immerse_gamble_chunk" android:textColor="@color/copernicus_nationwide"/>
<CheckBox android:background="@color/seventy_indenture" android:hint="@string/descartes_rootstock_loaves_mimi" android:id="@+id/damageView" android:layout_height="wrap_content" android:layout_margin="44dp" android:layout_width="wrap_content" android:text="@string/osgood_childlike_barkeep_decree" android:textColor="@color/ensue_ultrastructure_plunk" android:textSize="@dimen/courtney_tucson_textsize"/>
<AutoCompleteTextView android:background="@color/burdensome_stultify_planoconvex" android:hint="@string/odious_esquire_tier_refrain" android:id="@+id/rosenbergView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/ambrosial_upward_accusation_wacke"/>
<Button android:background="@color/admire_safeguard_costume" android:hint="@string/hydroxyl_mendelssohn_knit_bullhide" android:id="@+id/beauxView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/collide_coroner_differentiable" android:textColor="@color/eloquent_coset_fixture"/>
<CheckBox android:background="@color/endometriosis_daybreak_hypotenuse" android:hint="@string/levulose_sigmund_horsewomen_rightward" android:id="@+id/cardinalView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/soapstone_built" android:text="@string/artemis_olav_lampblack_frost"/>
<AutoCompleteTextView android:background="#772F6047" android:hint="@string/wallboard_reportorial_handicapped_lacerate" android:id="@+id/ammermanSaturateView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingTop="@dimen/poignant_mallow_size" android:text="@string/impede_hollandaise_deface" android:textColor="@color/flee_confect_dietary"/>
<CheckedTextView android:background="@color/foment_highland" android:hint="@string/rata_shrugging_egyptology" android:id="@+id/chimiqueView" android:layout_height="wrap_content" android:layout_marginTop="@dimen/slay_ellsworth_width" android:layout_width="wrap_content" android:text="@string/goff_toastmaster_glance_morristown" android:textColor="@color/whittier_embellish"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
